Creates services directory
Ensures that the directory is present

--- a/tasks/pacemaker.yml
+++ b/tasks/pacemaker.yml
@@ -43,6 +43,11 @@
     mode: 0644
     owner: root
 
+- name: Creates services directory
+  file:
+    path: /etc/corosync/service.d/
+    state: directory
+
 - name: Adds pacemaker service
   copy:
     src: pcmk
